syntax = "proto3";

option go_package = "github.com/psu-csl/replicated-store/go/consensus/multipaxos/comm";

package multipaxosrpc;

service MultiPaxosRPC {
  rpc HeartbeatHandler (HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  int64 ballot = 1;
  int64 last_executed = 2;
  int64 global_last_executed = 3;
}

message HeartbeatResponse {
  int64 last_executed = 1;
}